News部分をOfficial Twitterに変更。ファイルの読み込みを相対パスに変更。グーグルアナリティクス記述を一旦削除。

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="description" content="Peach Rabbitz official website">
   <meta name="keywords" content="Peach Rabbitz,沖縄,バンド">
   <meta name="format-detection" content="telephone=no">
-  <link rel="shortcut icon" href="/images/icon_masamune.svg">
-  <link rel="apple-touch-icon" href="/images/icon_masamune.svg">
+  <link rel="shortcut icon" href="./images/icon_masamune.svg">
+  <link rel="apple-touch-icon" href="./images/icon_masamune.svg">
   <!-- ▼OGPの設定 -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Peach Rabbitz official website">
@@ -23,49 +23,46 @@
   <meta name="twitter:title" content="Peach Rabbitz official website">
   <meta name="twitter:description" content="Peach Rabbitz オフィシャルサイト">
   <!-- ▼ファイル読み込み -->
-  <link rel="stylesheet" href="/css/style.css">
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-T13XBC77GE"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-T13XBC77GE');
-  </script>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
   <header class="header">
     <h1 class="logo">
-      <a href="/"><img src="/images/logo_peach-rabbitz.svg" alt="Peach Rabbitz"></a>
+      <a href="/"><img src="./images/logo_peach-rabbitz.svg" alt="Peach Rabbitz"></a>
     </h1>
     <ul class="navi-icon">
-      <li class="navi-icon__item"><a href="https://www.instagram.com/peach_rabbitz/" target="_blank"><img src="/images/icon_instagram.png" alt="Instagram"></a></li>
-      <li class="navi-icon__item"><a href="https://twitter.com/peach_rabbitz" target="_blank"><img src="/images/icon_twitter.png" alt="Twitter"></a></li>
-      <li class="navi-icon__item"><a href="https://www.facebook.com/Peach-Rabbitz-101141732020369/" target="_blank"><img src="/images/icon_facebook.png" alt="Facebook"></a></li>
-      <li class="navi-icon__item"><a href="https://suzuri.jp/Peach_Rabbitz" target="_blank"><img src="/images/icon_store.png" alt="Store"></a></li>
+      <li class="navi-icon__item"><a href="https://www.instagram.com/peach_rabbitz/" target="_blank"><img src="./images/icon_instagram.png" alt="Instagram"></a></li>
+      <li class="navi-icon__item"><a href="https://twitter.com/peach_rabbitz" target="_blank"><img src="./images/icon_twitter.png" alt="Twitter"></a></li>
+      <li class="navi-icon__item"><a href="https://www.facebook.com/Peach-Rabbitz-101141732020369/" target="_blank"><img src="./images/icon_facebook.png" alt="Facebook"></a></li>
+      <li class="navi-icon__item"><a href="https://suzuri.jp/Peach_Rabbitz" target="_blank"><img src="./images/icon_store.png" alt="Store"></a></li>
     </ul>
   </header>
 
   <main class="main">
     <p class="main-visual">
-      <img class="sp-none" src="/images/mainVisual_pc.jpg" alt="写真：Peach Rabbitzのメンバー">
-      <img class="pc-none" src="/images/mainVisual_sp.jpg" alt="写真：Peach Rabbitzのメンバー">
+      <img class="sp-none" src="./images/mainVisual_pc.jpg" alt="写真：Peach Rabbitzのメンバー">
+      <img class="pc-none" src="./images/mainVisual_sp.jpg" alt="写真：Peach Rabbitzのメンバー">
     </p>
+
+    <section class="section">
+      <div class="section__inner">
+        <h2 class="headingLv2">Official Twitter</h2>
+        <div class="official-twitter">
+          <a class="twitter-timeline" data-width="500" data-height="450" data-theme="light" href="https://twitter.com/peach_rabbitz?ref_src=twsrc%5Etfw">Tweets by peach_rabbitz</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
+      </div>
+    </section>
 
     <section class="section">
       <div class="section__inner">
         <h2 class="headingLv2">Movie</h2>
         <div class="movie">
           <div class="movie__item">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/MZjciZvgyn8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/-SiJPgucAAo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <div class="movie__item">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/HRG1gQODNps" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
-          <div class="movie__item">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/d-IK3jMXUJU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/RiiJW7M9dfA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
       </div>
@@ -73,60 +70,60 @@
     
     <section class="section section--dark">
       <div class="section__inner">
-        <h2 class="headingLv2">Music</h2>
+        <h2 class="headingLv2">Music Streaming</h2>
         <div class="musicArea">
           <ul class="music">
             <li class="music__item">
               <a href="https://music.apple.com/jp/artist/peach-rabbitz/1552378671" target="_blank">
-                <span class="music__logo"><img src="/images/logo_appleMusic.png" alt=""></span>
+                <span class="music__logo"><img src="./images/logo_appleMusic.png" alt=""></span>
                 <span class="music__text">Apple Music</span>
               </a>
             </li>
             <li class="music__item">
               <a href="https://www.youtube.com/channel/UCRdBJVJxTqr2ZyP_BbS3rpw" target="_blank">
-                <span class="music__logo"><img src="/images/logo_youtubeMusic.png" alt=""></span>
+                <span class="music__logo"><img src="./images/logo_youtubeMusic.png" alt=""></span>
                 <span class="music__text">Youtube Music</span>
               </a>
             </li>
             <li class="music__item">
               <a href="https://open.spotify.com/artist/01zaLFNTwqkcxKBtRxmheh" target="_blank">
-                <span class="music__logo"><img src="/images/logo_spotify.png" alt=""></span>
+                <span class="music__logo"><img src="./images/logo_spotify.png" alt=""></span>
                 <span class="music__text">Spotify</span>
               </a>
             </li>
             <li class="music__item">
               <a href="https://music.amazon.co.jp/artists/B08W2CD2MS/peach-rabbitz" target="_blank">
-                <span class="music__logo"><img src="/images/logo_amazonMusic.png" alt=""></span>
+                <span class="music__logo"><img src="./images/logo_amazonMusic.png" alt=""></span>
                 <span class="music__text">Amazon Music</span>
               </a>
             </li>
             <li class="music__item">
               <a href="https://listen.tidal.com/artist/23396452" target="_blank">
-                <span class="music__logo"><img src="/images/logo_tidal.png" alt=""></span>
+                <span class="music__logo"><img src="./images/logo_tidal.png" alt=""></span>
                 <span class="music__text">Tidal</span>
               </a>
             </li>
             <li class="music__item">
               <a href="https://www.deezer.com/ja/artist/122505262" target="_blank">
-                <span class="music__logo"><img src="/images/logo_deezer.png" alt=""></span>
+                <span class="music__logo"><img src="./images/logo_deezer.png" alt=""></span>
                 <span class="music__text">Deezer</span>
               </a>
             </li>
             <li class="music__item">
               <a href="https://www.shazam.com/ja/artist/212233197/peach-rabbitz" target="_blank">
-                <span class="music__logo"><img src="/images/logo_shazam.png" alt=""></span>
+                <span class="music__logo"><img src="./images/logo_shazam.png" alt=""></span>
                 <span class="music__text">Shazam</span>
               </a>
             </li>
             <li class="music__item">
               <a href="https://us.napster.com/artist/peach-rabbitz" target="_blank">
-                <span class="music__logo"><img src="/images/logo_napster.png" alt=""></span>
+                <span class="music__logo"><img src="./images/logo_napster.png" alt=""></span>
                 <span class="music__text">Napster</span>
               </a>
             </li>
             <li class="music__item">
               <a href="https://www.claromusica.com/artist/5944467/MX" target="_blank">
-                <span class="music__logo"><img src="/images/logo_claroMusica.png" alt=""></span>
+                <span class="music__logo"><img src="./images/logo_claroMusica.png" alt=""></span>
                 <span class="music__text">Claro Música</span>
               </a>
             </li>
@@ -141,19 +138,19 @@
         <ul class="sns">
           <li class="sns__item">
             <a href="https://www.instagram.com/peach_rabbitz/" target="_blank">
-              <span class="sns__icon"><img src="/images/icon_instagram.png" alt=""></span>
+              <span class="sns__icon"><img src="./images/icon_instagram.png" alt=""></span>
               <span class="sns__text">Instagram</span>
             </a>
           </li>
           <li class="sns__item">
             <a href="https://twitter.com/peach_rabbitz" target="_blank">
-              <span class="sns__icon"><img src="/images/icon_twitter.png" alt=""></span>
+              <span class="sns__icon"><img src="./images/icon_twitter.png" alt=""></span>
               <span class="sns__text">Twitter</span>
             </a>
           </li>
           <li class="sns__item">
             <a href="https://www.facebook.com/Peach-Rabbitz-101141732020369/" target="_blank">
-              <span class="sns__icon"><img src="/images/icon_facebook.png" alt=""></span>
+              <span class="sns__icon"><img src="./images/icon_facebook.png" alt=""></span>
               <span class="sns__text">Facebook</span>
             </a>
           </li>
@@ -162,12 +159,12 @@
     </section>
 
     <section class="section">
-      <h2 class="headingLv2">Store</h2>
+      <h2 class="headingLv2">Goods</h2>
       <div class="section__inner">
         <p class="store">
           <a href="https://suzuri.jp/Peach_Rabbitz" target="_blank">
-            <span class="store__image"><img src="/images/img_store.jpg" alt="写真：グッズ"></span>
-            <span class="store__text"><img src="/images/logo_suzuri.png" alt="SUZURI by GMOペパボ"></span>
+            <span class="store__image"><img src="./images/img_store.jpg" alt="写真：グッズ"></span>
+            <span class="store__text"><img src="./images/logo_suzuri.png" alt="SUZURI by GMOペパボ"></span>
           </a>
         </p>
       </div>
