グーグルアナリティクス追加。

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Peach Rabbitz official website">
   <meta property="og:description" content="Peach Rabbitz official website">
-  <meta property="og:image" content="https://peachrabbitz.netlify.app/images/twitter_card.jpg">
+  <meta property="og:image" content="https://saki-hoku.github.io/peach_rabbitz/images/twitter_card.jpg">
   <meta property="og:site_name" content="Peach Rabbitz official website">
   <meta property="og:locale" content="ja_JP">
   <!-- ▼Twitter Cardsの設定 -->
@@ -24,6 +24,15 @@
   <meta name="twitter:description" content="Peach Rabbitz オフィシャルサイト">
   <!-- ▼ファイル読み込み -->
   <link rel="stylesheet" href="./css/style.css">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-KR8S6PZ29Z"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-KR8S6PZ29Z');
+  </script>
 </head>
 
 <body>
