--- a/index.html
+++ b/index.html
@@ -56,16 +56,8 @@
 
     <section class="section">
       <div class="section__inner">
-        <h2 class="headingLv2">Official Twitter</h2>
-        <div class="official-twitter">
-          <a class="twitter-timeline" data-width="500" data-height="450" data-theme="light" href="https://twitter.com/peach_rabbitz?ref_src=twsrc%5Etfw">Tweets by peach_rabbitz</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </div>
-      </div>
-    </section>
-
-    <section class="section">
-      <div class="section__inner">
-        <h2 class="headingLv2">Movie</h2>
+        <h2 class="headingLv2">About</h2>
+        <p class="lead">Peach Rabbitzは沖縄で活動しているバンドです。ライブ等のお誘いは各SNSのDMにてお願いします。</p>
         <div class="movie">
           <div class="movie__item">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/3Q2_IR2Yz3o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -76,6 +68,15 @@
           <div class="movie__item">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/RiiJW7M9dfA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="section__inner">
+        <h2 class="headingLv2">Official Twitter</h2>
+        <div class="official-twitter">
+          <a class="twitter-timeline" data-width="500" data-height="450" data-theme="light" href="https://twitter.com/peach_rabbitz?ref_src=twsrc%5Etfw">Tweets by peach_rabbitz</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
       </div>
     </section>
