--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <section class="section">
       <div class="section__inner">
         <h2 class="headingLv2">About</h2>
-        <p class="lead">Peach Rabbitzは沖縄で活動しているバンドです。ライブ等のお誘いは各SNSのDMにてお願いします。</p>
+        <p class="lead">Peach Rabbitzは沖縄で活動しているバンドです。ライブ等のお誘いは各SNSのDMにて。よろしくお願いします。</p>
         <div class="movie">
           <div class="movie__item">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/3Q2_IR2Yz3o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
